[package]
name = "kassandra-node"
version = "0.13.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

kassandra = { path = "../kassandra", version = "0.13.0" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink"] }
clap = { version = "4.2.7", features = ["derive"] }
stable-eyre = "0.2.2"
serde_yaml = "0.9.21"

tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-opentelemetry = "0.21.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0" }
