[package]
name = "kassandra-tester"
description = "Tester utility for cassandra"
keywords = ["cassandra", "db", "testing", "snapshot"]
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
kassandra = { path = "../kassandra" }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3.28", features = ["sink"] }
eyre = "0.6.8"
tracing = "0.1"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
scylla = { version = "0.10.0" }
