[package]
name = "kassandra"
version = "0.12.0"
authors = ["Alisa Gorelova <nanopro1g@gmail.com>"]
description = "Single node cassandra implementation"
license = "MIT"
readme = "../README.md"
edition = "2021"
keywords = ["cassandra", "db"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
eyre = "0.6.8"
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink"] }
nom = "7.1.3"
bytes = { version = "1.4.0", features = ["serde"] }
bitflags = "1"

seahash = "4.1.0"
thiserror = "1.0.40"
ulid = "1.0.0"
uuid = { version = "1.3.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.11"
derive_more = "0.99.17"
chrono = { version = "0.4.27", features = ["serde"] }
bigdecimal = { version = "0.4.0", features = ["serde"] }
num-bigint = { version = "0.4.3", features = ["serde"] }
num_enum = { version = "0.6" }
ron = "0.8.0"
strum = { version = "0.25", features = ["derive"] }
integer-encoding = "4.0.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
