[package]
name = "kassandra"
version.workspace = true
authors.workspace = true
description = "Single node kassandra implementation"
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"], default-features = false }
tokio-util = { version = "0.7.8", features = ["codec"] }
eyre = "0.6.8"
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink"] }
nom = "7.1.3"
bytes = { version = "1.4.0", features = ["serde"] }
bitflags = "2"
indexmap = { version = "2.1.0", features = ["serde"] }
seahash = "4.1.0"
thiserror = "1.0.40"
ulid = "1.0.0"
uuid = { version = "1.10.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.11"
serde_json = "1.0.107"
derive_more = "1.0.0"
chrono = { version = "0.4.27", features = ["serde"] }
bigdecimal = { version = "0.4.0", features = ["serde"] }
num-bigint = { version = "0.4.3", features = ["serde"] }
num_enum = { version = "0.6" }
ron = "0.8.0"
strum = { version = "0.25", features = ["derive"] }
integer-encoding = "4.0.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.34.0" }
